# tdd-embedded-rust

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: app.rs  main.rs  mock_peripherals.rs
